--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -38,6 +39,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
